fix bug nowrap

--- a/src/components/shared/messages/message-from/message-from.css
+++ b/src/components/shared/messages/message-from/message-from.css
@@ -80,6 +80,7 @@ _________________________________
 .info-wrapper {
   display: flex;
   text-align: right;
+  white-space: nowrap;
 }
 
 .to-me-mess-wrapper .from-mess {
